# repotask

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  repotask.spec
.github/workflows/: build-native.yml  ci.yml  opencode.yml  release.yml
scripts/: binary_smoke.py  build_portable.py
src/repotask/: __init__.py  __main__.py  cli.py  errors.py  files.py  git.py  resources.py  tasks.py  terminal.py
src/repotask/agents/: __init__.py  service.py
src/repotask/bundled/: __init__.py
src/repotask/bundled/agents/: code-investigator.md  cr-writer.md  diff-reviewer.md  implementation-planner.md  qa-planner.md  requirement-analyst.md
src/repotask/bundled/profiles/: android.yml  jetpack-compose.yml  web.yml
src/repotask/commands/: change_request.py  context.py  doctor.py  init.py  investigate.py  list_tasks.py  review.py  start.py  status.py
src/repotask/config/: __init__.py  loader.py  models.py  simple_yaml.py  writer.py
src/repotask/discovery/: __init__.py  assets.py  project.py  stacks.py  vcs.py
src/repotask/prompts/: __init__.py  service.py
src/repotask/providers/: __init__.py  base.py
src/repotask/rules/: __init__.py  service.py
src/repotask/templates/: __init__.py  service.py
src/repotask/vcs/: __init__.py  base.py
src/repotask/workflow/: __init__.py  service.py
tests/: __init__.py  conftest.py  test_agents.py  test_config.py  test_context.py  test_discovery.py  test_git.py  test_imports.py  test_init.py  test_integration.py  test_resources.py  test_rules.py  test_templates.py  test_vcs.py
(+20 files in other folders)
