[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "repotask"
version = "0.1.1"
description = "Provider-neutral, human-controlled developer workflow CLI"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "RepoTask Contributors" }]
keywords = ["developer-tools", "workflow", "git", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "prompt-toolkit>=3.0.47,<4",
  "PyYAML>=6.0.2,<7",
  "rich>=13.7,<15",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyinstaller>=6.10",
  "pytest>=8.3",
  "pytest-cov>=5",
  "ruff>=0.7",
]

[project.scripts]
repo-task = "repotask.cli:run"

[tool.hatch.build.targets.wheel]
packages = ["src/repotask"]

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/scripts",
  "/.github",
  "/.gitlab-ci.yml",
  "/README.md",
  "/LICENSE",
  "/CHANGELOG.md",
  "/CONTRIBUTING.md",
  "/repotask.spec",
]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
